🚚 Refactor routes
