# openapi.json
@@ -149,9 +149,7 @@
             }
           }
         }
-      }
-    },
-    "/book/remove/{bookId}": {
+      },
       "delete": {
         "parameters": [
           {
